    sizes relative to a parent container. if parent=null, behaves
    as before. (ezust)

- Bug # 1538702 - PluginManager fixes: Automatically loads unloaded
    dependent plugins. (ezust)

- jEdit.getPlugin(className, bool) now will search for and
  load plugins that were not yet loaded, given a className to search
  for. (ezust)

- added PluginJAR.findPlugin() which is used by the above method.
  added PluginJAR.load(), formerly a private method in the
  moved from the ManagePanel class. (ezust)

- added SearchMatcher.isMatchingEOL(); indicates whether the matched
  region ends at an EOL character. Part of bug fix for SF Bug #1541009.
  (Marcelo Vanzin)

- added new class org.gjt.sp.jedit.io.VFSFileFilter; an interface that
  defines a filter used by the VFS browser. (Marcelo Vanzin)

- added VFSBrowser.addVFSFileFilter() and VFSBrowser.getVFSFileFilter().
  Deprecated VFSBrowser.getFilenameFilter(). (Marcelo Vanzin)

- added VFS._listDirectory(Object,String,VFSFileFilter,boolean,Component,boolean,boolean)
  (Marcelo Vanzin)

- moved MiscUtilities.globToRE() to StandardUtilities. (Marcelo Vanzin)

- added org.gjt.sp.util.PropertiesBean. See javadoc for details.
  (Marcelo Vanzin)

}}}

{{{ Bug Fixes

- SplashScreen is now in the middle of the screen, instead of between
  2 screens (ezust)

- PluginManager enhancements - spacebar and escape keys work from
    ManagePanel (only for single selections though). (ezust)

- GuiUtilities.load/save geometry now saves x and y coordinates
  relative to the parent component. Changed core to make dialogs
  and floating dockables pop up in a place relative to the parent
  view.  (#1292706) (ezust)

- Added a "parent" to the

- Memory dialog reports wrong values (#1538051) (Matthieu Casanova)

- Shortcut sorting was broken (#1538452) (Matthieu Casanova)

- Actions to-lower and to-upper now selects the word at caret if
  there is no selection (#1538720) (Matthieu Casanova)
